<resources>
    <string name="app_name">Contacts</string>
    <string name="title_activity_add_contact">AddContact</string>
    //add
    <string name="btn_add_description">Add New Contact</string>
    <string name="btn_done_description">Save contact</string>
    <string name="default_name">No name</string>
    <string name="thumbnail_description">Avatar</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>

    <string name="full_name_hint">Full name</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="more_fields_text">More fields</string>
    <string name="default_about">About</string>
    <string name="default_email">Email: </string>
    <string-array name="device">
        <item>Phone</item>
        <item>SIM 1</item>
        <item>SIM 2</item>
    </string-array>
</resources>