<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    tools:context=".AddContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_toolbar"
        android:background="@color/black2"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Create New Contact"
        app:titleMarginStart="30dp"
        app:logo="@drawable/ic_close_24"
        app:layout_constraintTop_toTopOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/add_toolbar"
        android:layout_centerHorizontal="true"
        android:background="#888888"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_person_24_white"
        app:civ_border_color="#FFF"
        app:civ_border_width="2dp" />

    <ImageView
        android:id="@+id/btn_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_thumbnail"
        android:layout_marginTop="-60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        android:contentDescription="@string/thumbnail_description" />

    <ImageView
        android:id="@+id/btn_delete_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_thumbnail"
        android:layout_marginTop="-54dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="127dp"
        android:src="@drawable/ic_delete_24"
        android:contentDescription="Delete thumbnail"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_thumbnail"
        android:orientation="vertical"
        android:padding="15dp">

        <Spinner
            android:id="@+id/sp_list_device"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_baseline_person_24_black"
            android:drawablePadding="10dp"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#c5c5c5"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#c5c5c5"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:drawablePadding="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#c5c5c5"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#fff"
            android:drawableStart="@drawable/ic_baseline_home_24"
            android:drawablePadding="10dp"
            android:hint="@string/address_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#c5c5c5"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_view_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/more_fields_text"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>